Squashed alpha-1.5.0-pre18
commit dc97cd3d5c2de258af7e3838bc82c1a346b8e807
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 15 19:23:52 2015 +0100

    fix language code translations for pt_BR

commit c1ef796a2bf7d2f27c5727780c6b64160c6e5c02
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 15 19:18:42 2015 +0100

    Fix accelerators

commit 33bd2bbf7eb8e405b55fe77679e79fa54931563f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 15 13:57:59 2015 +0100

    Quantity convertion

commit 3c486dcf91101e9c697b927909ce61f470da4adf
Merge: a2c328b 3d6d58b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 15 11:58:27 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 3d6d58b8fe5a208dbc306389632588d980a3c4f6
Merge: 5f40f09 ee9e6bc
Author: Weblate <noreply@weblate.org>
Date:   Fri Nov 13 19:45:06 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 5f40f099d1a5362ba38ed19fc14c147e161fa732
Author: Mads Dyrmann <madsdyrmannlarsen@gmail.com>
Date:   Thu Nov 12 09:28:10 2015 +0100

    Translated using Weblate (Danish)

    Currently translated at 97.6% (1793 of 1836 strings)

--- a/freeplane/resources/translations/Resources_da.properties
+++ b/freeplane/resources/translations/Resources_da.properties
@@ -137,7 +137,9 @@ attributes_visible_tooltip=Valgte synlige
 automatic_layout=Automatisk layout
 automatic_layout_disabled=deaktiveret
 automatically_save_message=Mindmap blev automatisk gemt (med filnavnet {0}) \u2026
+AutomaticEdgeColor.FOR_BRANCHES=for grene
 AutomaticEdgeColor.FOR_COLUMN=for kolonne
+AutomaticEdgeColor.FOR_COLUMNS=for kolonner
 AutomaticEdgeColor.ON_BRANCH_CREATION=Ved skabelse af gren
 AutomaticEdgeColorHookAction.text=Automatisk kantfarve
 AutomaticLayout.ALL=for alle knudepunkter
