--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -1083,10 +1083,10 @@ OptionPanel.max_shortened_text_length=Largura m\u00E1xima de texto abreviado
 OptionPanel.metal=Metal
 OptionPanel.min_node_width=Largura m\u00EDnima do n\u00F3
 OptionPanel.motif=Motivo
-OptionPanel.nb=Noruegu\u00EAs
+OptionPanel.nb=Noruegu\u00EAs Bokm\u00E5l / Norsk bokm\u00E5l
 OptionPanel.never_save_folding=Nunca
 OptionPanel.nl=Holand\u00EAs
-OptionPanel.nn=Noruegu\u00EAs
+OptionPanel.nn=Noruegu\u00EAs Nynorsk / Norsk nynorsk
 OptionPanel.nodebackgroundcolor=Plano de fundo
 OptionPanel.nodebackgroundcolor.tooltip=O plano de fundo do n\u00F3 quando n\u00E3o est\u00E1 selecionado.
 OptionPanel.nodecolor=Texto
