Squashed alpha-1.5.0-pre15
commit 23f5cca0cfdbcba12f8f50b257a150dda24fa3bc
Merge: 0e2d9ec 6a5127d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 22:04:00 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane.git into 1.5.x

commit 0e2d9ec0d93bc4c80d770f9f683d1aa29fca4b14
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 21:54:17 2015 +0100

    Accelerators as contributed by Jonas

commit 6a5127d79c888db59ca3cf332187b32bc1c35fce
Merge: e939c84 d7e600d
Author: Weblate <noreply@weblate.org>
Date:   Mon Nov 9 21:36:19 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit e939c840a655bd2df0f822af454242033fae92ec
Author: hokorobi <hokorobi.hokorobi@gmail.com>
Date:   Mon Nov 9 15:41:29 2015 +0100

    Translated using Weblate (Japanese)

    Currently translated at 99.2% (1822 of 1836 strings)

commit 46257080d273de50f2c621b1d4f463966f71d231
Author: Kristjan Räts <kristjanrats@gmail.com>
Date:   Mon Nov 9 17:00:50 2015 +0100

    Translated using Weblate (Estonian)

    Currently translated at 53.3% (979 of 1836 strings)

commit d7e600df664a278da9a3e3163dba2362f3a12503
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 21:28:19 2015 +0100

    Use properties contributed by Jonas

commit bae8024caad228ed169b88fa48a59a1835278efe
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 20:57:44 2015 +0100

    Sort freeplane properties

commit 16489815d93c02e4a997a312d7a5f7dddffc4b7a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 20:25:50 2015 +0100

    Change style editor popup menu

commit b909ddf88ed85c20a49bd33e3938f2ef9761f2c9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 20:12:41 2015 +0100

    Position of close map question dialog

commit 30b4eb0cb0eae4cebf1baf54cc0295f8da38d5e0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Nov 9 08:19:45 2015 +0100

    Use floating windows with frames

--- a/freeplane/resources/translations/Resources_et.properties
+++ b/freeplane/resources/translations/Resources_et.properties
@@ -7,7 +7,7 @@ accessories/plugins/EncryptNode.properties_1=Salas\u00F5nad ei ole samad v\u00F5
 accessories/plugins/EncryptNode.properties_2=Sisesta salas\u00F5na:
 accessories/plugins/EncryptNode.properties_3=Sisesta kontrolliks veelkord sama salas\u00F5na:
 accessories/plugins/EncryptNode.properties_4=Sisestage oma salas\u00F5na.
-accessories/plugins/EncryptNode.properties_5=<html>Pea meeles, et kr\u00FCpteeringu tugevus <br>s\u00F5ltub paaegu t\u00E4ielikult salas\u00F5na tugevusest.</html>
+accessories/plugins/EncryptNode.properties_5=<html>Pea meeles, et kr\u00FCpteeringu tugevus <br>s\u00F5ltub peaaegu t\u00E4ielikult salas\u00F5na tugevusest.
 accessories/plugins/EncryptNode.properties_6=Sobib
 accessories/plugins/EncryptNode.properties_7=Loobu
 accessories/plugins/EncryptNode.properties_insert_encrypted_node_first=Sa v\u00F5id kr\u00FCpteerituse olekut kr\u00FCpteeritud s\u00F5lmel \u00FCmber l\u00FClitada. Palun lisa selline s\u00F5lm, kasutades t\u00F6\u00F6riistade men\u00FC\u00FCd.
@@ -89,7 +89,7 @@ CancelAction.text=&Loobu
 cannot_add_parent_diff_parents=K\u00F5ik alams\u00F5lmed peavad olema sama s\u00F5lme k\u00FCljes, et seda funktsiooni kasutada.
 cannot_add_parent_to_root=Peas\u00F5lme ei saa uue naabers\u00F5lme k\u00FClge lisada.
 cannot_delete_root=Peas\u00F5lme ei saa kustutada ega l\u00F5igata.
-cannot_join_nodes_with_children=Ei suuda liituda s\u00F5lmega, mille all on omakorda s\u00F5lmed.
+cannot_join_nodes_with_children=S\u00F5lmi, millede all on omakorda s\u00F5lmed, ei saa liita
 cannot_move_to_child=Ei suuda s\u00F5lme alams\u00F5lme k\u00FClge liigutada .
 CenterAction.text=Keskele
 ChangeConnectorArrowsAction.backward.text=Tagasi
@@ -141,7 +141,7 @@ edit_link_manually=Redigeeri k\u00E4sitsi h\u00FCperviidet...
 EditAction.text=Redigeeri s\u00F5lme
 EditAttributesAction.text=Redigeeri omadusi
 EditFilterAction.text=Redigeeri
-EditLongAction.text=Redigeeri s\u00F5lme aknas...
+EditLongAction.text=Redigeeri s\u00F5lme tuuma aknas
 EncryptedMap.text=Loo kr\u00FCpteeritud kaart ...
 EncryptedMap.tooltip=Loo uus kr\u00FCpteeritud kaart
 enter_base_url=Ma lisan viited suhteliste aadressidena. Palun sisesta p\u00F5hiaadress.
@@ -152,7 +152,7 @@ error_applying_template=XSL-mallide kehtestamisel tekkis viga.
 error_creating_directory=Ei suuda kataloogi luua, et sinna eksportida.
 export_pdf_text=Kaasaskantav DokumendiVorming (PDF)
 export_svg_text=Skaleeritav Vektorgraafika (SVG)
-ExportAction.text=&Ekspordi
+ExportAction.text=Kaardi &eksport...
 ExportBranchAction.text=S\u00F5lmede haru kui uus kaart ...
 ExportBranchToHTMLAction.text=Haru HTML-ina
 ExportPdf.text=Kui PDF...
@@ -377,7 +377,7 @@ NavigationNextMapAction.text=J\u00E4rgmine kaart
 NavigationPreviousMapAction.text=Eelmine kaart
 new_mindmap=Uus m\u00F5ttekaart
 new_node=Uus s\u00F5lm
-new_node_as_sibling_not_possible_for_the_root=Uut peas\u00F5lme ei saa lisada.
+new_node_as_sibling_not_possible_for_the_root=Uus sama taseme s\u00F5lm ei ole peas\u00F5lmega v\u00F5imalik
 NewChildAction.text=Uus s\u00F5lm olemasoleva s\u00F5lme alla
 NewMapAction.text=Uus
 NewParentNode.text=Uus peas\u00F5lm
@@ -387,7 +387,7 @@ NewSiblingAction.text=Uus s\u00F5lm peas\u00F5lme alla
 no=Ei
 no_format_copy_before_format_paste=Sa ei saa vormindust asetada kuni ei ole \u00FChtegi kopeeritud.
 no_found_from=<html>Ei <b>{0}</b>&nbsp;leitud <b>{1}</b>.</html>
-no_more_found_from=<html>Rohkem <b>{0}</b>&nbsp;ei leitud <b>{1}</b>.
+no_more_found_from=<html>Rohkem <u>{0}</u> ei leitud "{1}".</html>
 no_previous_find=Eelmist ei leitud.
 node=S\u00F5lm
 node_changed_discard_changes=Sa oled muutnud s\u00F5lme. Kas soovid muudatused unustada?
@@ -405,14 +405,14 @@ NodeUpAction.text=Liiguta s\u00F5lm \u00FCles
 nonboldify_branch=Eemalda rasvane kiri
 nonitalicise_branch=Eemalda kaldkiri
 normal=Tavaline
-not_saved_for_link_error=Kaart tuleb salvestada enne kui saab viidet failile lisada.
+not_saved_for_link_error=Kaart tuleb enne failivalijale lingi m\u00E4\u00E4ramist salvestada
 ok=&Sobib
 OKAction.text=&Sobib
 OpenAction.text=Ava...
 OpenFreeplaneSiteAction.text=Freeplane-i koduleht
 option_changes_may_require_restart=Muudetud seadistuste j\u00F5ustumiseks tuleb Freeplane taask\u00E4ivitada.
 OptionalDontShowMeAgainDialog.cancel=&Ei
-OptionalDontShowMeAgainDialog.dontShowAgain=&\u00C4ra uuesti k\u00FCsi enam
+OptionalDontShowMeAgainDialog.dontShowAgain=&\u00C4ra enam uuesti k\u00FCsi.
 OptionalDontShowMeAgainDialog.ok=&Jah
 OptionalDontShowMeAgainDialog.rememberMyDescision=&J\u00E4ta minu otsus meelde.
 OptionPanel.absolute=Absoluutne
@@ -457,7 +457,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>Windowsi jaoks (jut
 OptionPanel.default_browser_command_windows_nt=Vaikimisi veebilehitseja k\u00E4ivitamise k\u00E4sk MS Windows NT-s
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>Windowsi jaoks (jutum\u00E4rgid on vajalikud t\u00E4nu h\u00FCperviitele, millel on "=" m\u00E4rk viites).</html>
 OptionPanel.Defaults=Vaikimisi seaded
-OptionPanel.delete_automatic_saves_at_exit=Kustuta programmist v\u00E4ljumisel automaatselt salvestatud t\u00F6\u00F6d.
+OptionPanel.delete_automatic_saves_at_exit=Programmist v\u00E4ljumisel kustuta automaatsalvestused
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html> Kui soovid, et Freeplane kustutaks automaatselt sulgemisel failid siis m\u00E4\u00E4ra see muutuja t\u00F5eseks</html>
 OptionPanel.delete_nodes_without_question=Kustutada s\u00F5lmed kinnitust k\u00FCsimata?
 OptionPanel.delete_nodes_without_question.tooltip=Kui siin on m\u00E4rgitud siis s\u00F5lmed kustutatakse kinnitust k\u00FCsimata. See v\u00F5ib p\u00F5hjustada informatsiooni kaotuse t\u00E4helepanuta kustutamisel.
@@ -480,7 +480,7 @@ OptionPanel.en=EN (inglise keel)
 OptionPanel.Environment=Keskkond
 OptionPanel.es=ES (hispaania keel)
 OptionPanel.et=Et (eesti keel)
-OptionPanel.execute_scripts_without_asking=Kas skriptid tuleb k\u00E4ivitada kinnitust k\u00FCsimata?
+OptionPanel.execute_scripts_without_asking=Skriptide k\u00E4ivitamine on lubatud
 OptionPanel.execute_scripts_without_asking.tooltip=<html>Freeplane-i skriptid on p\u00F5him\u00F5tteliselt suutelised mistahes tegevust Sinu arvutis tegema. <br>Seet\u00F5ttu ei peaks Sa skripte k\u00E4ivitama, mille ohutuses Sa kindel ei ole.</html>
 OptionPanel.execute_scripts_without_exec_restriction=Luba k\u00E4ivitada teisi rakendusi (EI ole soovitatav)
 OptionPanel.execute_scripts_without_exec_restriction.tooltip=<html><body>Kui Sinu Lahe Skript vajab k\u00E4ivitumiseks teisi rakendusi (nt veebilehitseja) luba k\u00FCsimata(!),<br>siis pead Sa selle v\u00F5imaluse lubama. <br>Kuid ole ettevaatlik kuna t\u00E4nap\u00E4eval v\u00F5ivad kahtlased skriptid kahjustada Sinu arvutit!</body></html>
@@ -537,7 +537,7 @@ OptionPanel.nb=NB (bokm\u00E5l, norra keel)
 OptionPanel.nl=NL (hollandi keel)
 OptionPanel.nn=NN (nynorsk, norra keel)
 OptionPanel.nodebackgroundcolor=S\u00F5lme tausta v\u00E4rv
-OptionPanel.nodebackgroundcolor.tooltip=S\u00F5lmede taust kui ei ole valitud
+OptionPanel.nodebackgroundcolor.tooltip=S\u00F5lme taust kui s\u00F5lm ei ole valitud.
 OptionPanel.nodecolor=S\u00F5lme v\u00E4rv
 OptionPanel.nodecolor.tooltip=S\u00F5lmede esiplaani v\u00E4rv kui ei ole valitud.
 OptionPanel.nodefontbold=Rasvane kiri
@@ -651,7 +651,7 @@ OptionPanel.uk_UA=Uk UA[translate me]
 OptionPanel.undefined_font=M\u00E4\u00E4ramata kirjakuju
 OptionPanel.undo_levels=V\u00F5ta tasemed tagasi
 OptionPanel.undo_levels.tooltip=<html>M\u00E4\u00E4rab selle, kui mitu sammu tagasiv\u00F5tmiseks salvestatakse.</html>
-OptionPanel.unfold_on_paste=Voldi s\u00F5lm asetamisel lahti.
+OptionPanel.unfold_on_paste=Asetamisel voldi s\u00F5lm lahti
 OptionPanel.unfold_on_paste.tooltip=Voldi s\u00F5lm asetamisel lahti v\u00F5i lohista-ning-kukuta
 OptionPanel.use_common_out_point_for_root_node=\u00DChendusjooned peas\u00F5lmega algavad \u00FChest punktist
 OptionPanel.use_common_out_point_for_root_node.tooltip=\u00DChendusjooned peas\u00F5lmega algavad \u00FChest punktist
@@ -663,8 +663,8 @@ OptionPanel.wheel_velocity.tooltip=Kaarti saab hiire rattaga kiiremini liigutada
 OptionPanel.windows=Windows
 OptionPanel.zh_CN=ZH CN (hiina keel)
 OptionPanel.zh_TW=ZH (hiina keel)
-out_of_memory=Out of memory.[translate me]
-PageAction.text=Lehek\u00FClje &Seaded
+out_of_memory=Kogu m\u00E4lu on kasutusel.
+PageAction.text=Lehek\u00FClje seaded...
 PasteAction.text=Aseta
 PatternNewNameProperty=Uus muster
 PatternToString.backgroundColor=Taustav\u00E4rv
@@ -744,10 +744,10 @@ repair_link_question=Ei suutnud viidatud kaarti laadida. Kas soovid k\u00E4sitsi
 replace=Asenda
 ResetNodeLocationAction.text=Taasta esialgne &Paigutus
 save_failed={0} katse kaarti salvestada eba\u00F5nnestus.
-save_unsaved=Kas salvestada see m\u00F5ttekaart? :
+save_unsaved=Kas salvestada see m\u00F5ttekaart?
 SaveAction.text=&Salvesta
 SaveAll.text=Salvesta &K\u00F5ik
-SaveAll.tooltip=Salvestab k\u00F5ik avatud kaardid.
+SaveAll.tooltip=Salvestab k\u00F5ik avatud kaardid
 SaveAsAction.text=Salvesta kui...
 saved=Salvestatud
 scheme_evaluate=Hinda!
@@ -755,7 +755,7 @@ ScriptEditor.text=&Skripti redaktor...
 ScriptEditor.tooltip=V\u00F5imaldab suuri skripte Freeplane-i sees kirjutada.
 ScriptEditorPanel.changed_cancel=Skripte on muudetud. Kas t\u00F5esti soovid loobuda neist muudatustest?
 select_favorites_folder=Vali kataloog kus asuvad Sinu j\u00E4rjehoidjad
-select_folder_for_importing=Vali kataloog, mida importida.
+select_folder_for_importing=Vali kataloog, mida importida
 SelectAllAction.text=Vali k\u00F5ik n\u00E4htav
 SelectBranchAction.text=Vali n\u00E4htav haru
 selection_method_by_click=\u00DCks kl\u00F5ps m\u00E4rkimiseks
@@ -777,7 +777,7 @@ ShowSelectionAsRectangleAction.text=Ristk\u00FClikukujuline valik
 simplyhtml.aboutFrameTitle=Sellest programmist l\u00E4hemalt
 simplyhtml.aboutLabel=SimplyHTML-ist l\u00E4hemalt...
 simplyhtml.alignCenter=keskele
-simplyhtml.alignLabel=Alignment:[translate me]
+simplyhtml.alignLabel=Joondus:
 simplyhtml.alignLeft=vasakule
 simplyhtml.alignRight=paremale
 simplyhtml.allCellsRangeLabel=k\u00F5ik lahtrid
@@ -966,13 +966,13 @@ unfold=Voldi lahti
 UnfoldAllAction.text=Voldi k\u00F5ik lahti
 UnfoldAllAction.tooltip=<html>Voldib k\u00E4esoleva s\u00F5lme koos selle all olevate s\u00F5lmedega lahti.</html>
 UnfoldOneLevelAction.text=Voldi \u00FChe taseme v\u00F5rra lahti
-UnfoldOneLevelAction.tooltip=<html>Voldib k\u00E4esoleva s\u00F5lme \u00FChe taseme v\u00F5rra lahti.</html>
+UnfoldOneLevelAction.tooltip=Voldib valitud s\u00F5lme \u00FChe taseme v\u00F5rra lahti.
 UpdateCheckAction.text=Check for Updates[translate me]
 updatecheckdialog=Update Check Dialog[translate me]
 url_error=See internetiviide on valesti kirjutatud!
 url_load_error=Ei suutnud siit aadressilt kaarti laadida:
 UsePlainTextAction.text=Kasuta paljast teksti
-user_defined_zoom=Kasutaja m\u00E4\u00E4ratud.
+user_defined_zoom=Kasutaja m\u00E4\u00E4ratud
 user_defined_zoom_status_bar=Suurenduse muutmine kasutaja poolt m\u00E4\u00E4ratud v\u00E4\u00E4rtusele {0}%.
 user_zoom=Tr\u00FCkkimise suurendus (0.0 - 2.0):
 WebDocuAction.text=Dokumentatsioon internetis
