--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -1124,6 +1124,9 @@ OptionPanel.outline_vgap=\u4E0A\u4E0B\u306E\u9593\u9694(\u30D4\u30AF\u30BB\u30EB
 OptionPanel.paint_connectors_behind=\u30B3\u30CD\u30AF\u30BF\u306E\u8868\u793A\u3092\u30CE\u30FC\u30C9\u306E\u80CC\u5F8C\u306B
 OptionPanel.parse_data=\u6570\u5024\u3084\u65E5\u6642\u306E\u5165\u529B\u3092\u8A8D\u8B58
 OptionPanel.parse_data.tooltip=\u65E5\u4ED8\u3001\u6642\u523B\u4ED8\u304D\u65E5\u4ED8\u3001\u53CA\u3073\u6570\u5024\u306E\u5165\u529B\u3092\u89E3\u6790\u3057\u3001\u6A19\u6E96\u66F8\u5F0F\u306E\u9069\u7528\u3092\u8A66\u307F\u307E\u3059\u3002\u8868\u793A\u4F8B\uFF1A 100,000.00\u300112/31\u3001 12/31/99\u3001 1999-12-31\u30011999-12-31 23:59
+OptionPanel.parse_formulas=\u6570\u5F0F\u3092\u8A8D\u8B58\u3059\u308B
+OptionPanel.parse_formulas.tooltip=\u30CE\u30FC\u30C9\u304C '=' \u3067\u59CB\u307E\u3063\u3066\u3044\u305F\u5834\u5408\u3001\u6570\u5F0F\u3068\u3057\u3066\u8A8D\u8B58\u3059\u308B: \u53C2\u7167 http://www.freeplane.org/wiki/index.php/Formulas
+OptionPanel.parse_latex=LaTeX \u3092\u8A8D\u8B58\u3059\u308B
 OptionPanel.PASTE_HTML=HTML \u5F62\u5F0F
 OptionPanel.PASTE_PLAIN_TEXT=\u30D7\u30EC\u30FC\u30F3\u30C6\u30AD\u30B9\u30C8\u5F62\u5F0F
 OptionPanel.path_property_may_not_be_empty=\u30D1\u30B9\u30D7\u30ED\u30D1\u30C6\u30A3\u304C\u672A\u6D88\u53BB\u306E\u53EF\u80FD\u6027\u304C\u3042\u308A\u307E\u3059\u3002\u66F4\u65B0\u524D\u306E\u72B6\u614B\u306B\u623B\u308A\u307E\u3057\u305F\u3002
@@ -1462,8 +1465,10 @@ save_unsaved=\u4E0B\u8A18\u306E\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58\u3057\u307E\
 save_unsaved_styles=\u30B9\u30BF\u30A4\u30EB\u3092\u4FDD\u5B58\u3057\u307E\u3059\u304B\uFF1F
 SaveAcceleratorPresetsAction.text=\u30DB\u30C3\u30C8\u30AD\u30FC\u30BB\u30C3\u30C8\u3092\u4FDD\u5B58...
 SaveAction.text=\u30DE\u30C3\u30D7\u3092\uFF08\u4E0A\u66F8\u304D\uFF09\u4FDD\u5B58(&S)
+SaveAction_readonlyMsg=\u3053\u306E\u30DE\u30C3\u30D7\u306F\u8AAD\u307F\u53D6\u308A\u5C02\u7528\u3067\u3059\u3002\u3053\u306E\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58\u3059\u308B\u306B\u306F\u300C\u30D5\u30A1\u30A4\u30EB\u2192\u540D\u524D\u3092\u4ED8\u3051\u3066\u4FDD\u5B58...\u300D\u3092\u4F7F\u3063\u3066\u304F\u3060\u3055\u3044\u3002
 SaveAll.text=\u3059\u3079\u3066\u306E\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58(&L)
 SaveAll.tooltip=\u958B\u3044\u3066\u3044\u308B\u30DE\u30C3\u30D7\u3092\u3059\u3079\u3066\u4FDD\u5B58\u3057\u307E\u3059\u3002
+SaveAs_toReadonlyMsg={0} \u306F\u8AAD\u307F\u53D6\u308A\u5C02\u7528\u3067\u3059\u3002\u7570\u306A\u308B\u30D5\u30A1\u30A4\u30EB\u306B\u4FDD\u5B58\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 SaveAsAction.text=\u540D\u524D\u3092\u4ED8\u3051\u3066\u30DE\u30C3\u30D7\u3092\u4FDD\u5B58(&A)...
 saved=\u4FDD\u5B58\u3057\u307E\u3057\u305F
 saving_canceled=\u4FDD\u5B58\u3092\u4E2D\u6B62
