Squashed alpha-1.5.1-pre08
commit 2ee819824caa29706842f60eb62773067071d175
Merge: 820e67e 6237c7f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:54:14 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 820e67e6b7fadcdbefbe12fa86bf77f43a530102
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:54:01 2015 +0100

    Fix git revision information

commit 6237c7f1dcfce29c3fc56a867efbb77c93edfaf5
Merge: 26602ab 2f9b65e
Author: Weblate <noreply@weblate.org>
Date:   Sat Nov 28 09:26:44 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 26602ab14808f3506d110148a09edf9708b5859f
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Nov 28 00:01:19 2015 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.9% (1846 of 1847 strings)

commit 2f9b65e0e7e0b34661bc709659a64ffd159216c8
Merge: 5856f76 d060757
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:26:03 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 5856f769f27ef4cbfcf4a45588881dd32123b849
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:25:27 2015 +0100

    Fix text positioning for nodes with sizes smaller than needed

commit 99a90893afd7a037476b3f30fc553f581c4a5b63
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 09:11:44 2015 +0100

    Fix shape configuration NPE

commit d0607573c147ce7b5b7defc8b81c6a68a4f9b03b
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Sat Nov 28 07:33:41 2015 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1847 of 1847 strings)

commit 9bb95190f7d7df37007c9e894a01a379a12e32bd
Author: ezjerry liao <ezjerry@gmail.com>
Date:   Sat Nov 28 02:00:40 2015 +0100

    Translated using Weblate (Chinese (Taiwan))

    Currently translated at 100.0% (1847 of 1847 strings)

commit c2a54923b4b090461a311720dba45bd96dfef6bf
Author: Pe

--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -873,6 +873,7 @@ NodeShapeAction.bubble.text=&Mjehuri\u0107
 NodeShapeAction.fork.text=Ra&\u010Dva
 NodeShapeAction.narrow_hexagon.text=Uski \u0161esterokut
 NodeShapeAction.oval.text=Elipsa
+NodeShapeAction.rectangle.text=Pravokutnik
 NodeShapeAction.small_bubble.text=Mali mjehuri\u0107
 NodeShapeAction.small_wide_hexagon.text=Mali \u0161esterokut
 NodeShapeAction.wide_hexagon.text=\u0160iroki \u0161esterokut
@@ -1157,6 +1158,7 @@ OptionPanel.printonwhitebackground.tooltip=<html>Uvijek koristi bijelu pozadinu 
 OptionPanel.pt_BR=Portugalski BR
 OptionPanel.pt_PT=Portugalski PT
 OptionPanel.RECT=Pravokutnik
+OptionPanel.rectangle=Pravokutnik
 OptionPanel.relative=Relativne
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Pitaj"  (use in doubt).<br>"Da" prika\u017Ei ure\u0111iva\u010D za bolje oblikovanje teksta .<br>"Ne" prika\u017Ei jednostavni tekstualni ure\u0111iva\u010D.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Koristi bolje oblikovani tekst za zaljepljene \u010Dvorove
@@ -1253,6 +1255,8 @@ OptionPanel.set_property_text=Promijeni
 OptionPanel.set_property_text.tooltip=Prazno: Ne diraj; Minus=Makni svojstvo (postavi zadanu vrijednost); Plus=Promijeni svojstvo
 OptionPanel.setscript=Promijeniti?
 OptionPanel.setscript.tooltip=Skripta mo\u017Ee biti pridru\u017Eena stilu.
+OptionPanel.shape_horizontal_margin=Vodoravna margina
+OptionPanel.shape_vertical_margin=Okomita margina
 OptionPanel.sharp_bezier=Grubo bezier
 OptionPanel.sharp_linear=Grubo linearno
 OptionPanel.show_icon_for_attributes=Prika\u017Ei ikone obilje\u017Eja
@@ -1321,6 +1325,7 @@ OptionPanel.undo_levels=Broj poni\u0161tenja
 OptionPanel.undo_levels.tooltip=<html>Odre\u0111ivanje broja spremljenih koraka koji \u0107e se mo\u0107i vratiti funkcijom "Poni\u0161ti".</html>
 OptionPanel.unfold_on_paste=Rasklopi \u010Dvor kad ga zalijepi\u0161
 OptionPanel.unfold_on_paste.tooltip=Rasklopi \u010Dvor kad ga zalijepi\u0161 ili kad povu\u010De\u0161 i ispusti\u0161 \u010Dvor
+OptionPanel.uniform_shape=Ujedna\u010Deno
 OptionPanel.use_common_out_point_for_root_node=Rubovi zapo\u010Dinju iz jedne to\u010Dke na korijenskom \u010Dvoru
 OptionPanel.use_common_out_point_for_root_node.tooltip=Rubovi zapo\u010Dinju iz jedne to\u010Dke na korijenskom \u010Dvoru
 OptionPanel.use_tabbed_pane=Koristi tabove
