--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -876,6 +876,7 @@ NodeShapeAction.bubble.text=&Bolha
 NodeShapeAction.fork.text=Bi&furca\u00E7\u00E3o
 NodeShapeAction.narrow_hexagon.text=Hex\u00E1gono estreito
 NodeShapeAction.oval.text=Oval
+NodeShapeAction.rectangle.text=Ret\u00E2ngulo
 NodeShapeAction.small_bubble.text=Bolha pequena
 NodeShapeAction.small_wide_hexagon.text=Hex\u00E1gono pequeno
 NodeShapeAction.wide_hexagon.text=Hex\u00E1gono largo
@@ -1161,6 +1162,7 @@ OptionPanel.printonwhitebackground.tooltip=<html>Usar sempre um fundo branco par
 OptionPanel.pt_BR=Portuguese(Brazil)/Portugu\u00EAs(Brasil)
 OptionPanel.pt_PT=Portuguese(Portugal)/Portugu\u00EAs(Portugal)
 OptionPanel.RECT=Ret\u00E2ngulo
+OptionPanel.rectangle=Ret\u00E2ngulo
 OptionPanel.relative=Relativo
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Perguntar" pergunta-lhe (use se tem d\u00FAvidas).<br>"Sim" mostra o editor de Rich Text.<br>"N\u00E3o" mostra o editor de texto simples.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use Rich Text para n\u00F3s colados
@@ -1257,6 +1259,8 @@ OptionPanel.set_property_text=Alterar
 OptionPanel.set_property_text.tooltip=Marcar para alterar este estilo adequadamente
 OptionPanel.setscript=Alterar?
 OptionPanel.setscript.tooltip=Pode associar um script ao estilo.
+OptionPanel.shape_horizontal_margin=Margem horizontal
+OptionPanel.shape_vertical_margin=Margem vertical
 OptionPanel.sharp_bezier=Curva afiada (B\u00E9zier)
 OptionPanel.sharp_linear=Linear afiada
 OptionPanel.show_icon_for_attributes=Mostrar \u00EDcone para atributos
@@ -1325,6 +1329,7 @@ OptionPanel.undo_levels=N\u00EDveis de "Desfazer"
 OptionPanel.undo_levels.tooltip=<html>Determina quantos comandos ser\u00E3o gravados para desfazer.</html>
 OptionPanel.unfold_on_paste=Desdobrar o n\u00F3 ao colar
 OptionPanel.unfold_on_paste.tooltip=Desdobrar o n\u00F3 ao colar ou Arrastar e Largar
+OptionPanel.uniform_shape=Uniforme
 OptionPanel.use_common_out_point_for_root_node=As linhas come\u00E7am num ponto do n\u00F3-raiz
 OptionPanel.use_common_out_point_for_root_node.tooltip=As linhas come\u00E7am num ponto do n\u00F3-raiz
 OptionPanel.use_tabbed_pane=Utilizar separadores
