--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -875,6 +875,7 @@ NodeShapeAction.bubble.text=(&B)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u6C23\u6CE1
 NodeShapeAction.fork.text=(&F)\u7BC0\u9EDE\u5916\u89C0\u6539\u6210\u5E95\u7DDA
 NodeShapeAction.narrow_hexagon.text=\u72F9\u7A84\u516D\u89D2\u5F62
 NodeShapeAction.oval.text=\u6A62\u5713\u5F62
+NodeShapeAction.rectangle.text=\u77E9\u5F62
 NodeShapeAction.small_bubble.text=\u5C0F\u6C23\u6CE1
 NodeShapeAction.small_wide_hexagon.text=\u5C0F\u516D\u89D2\u5F62
 NodeShapeAction.wide_hexagon.text=\u5BEC\u516D\u89D2\u5F62
@@ -1159,6 +1160,7 @@ OptionPanel.printonwhitebackground.tooltip=<html>\u5217\u5370\u6642\u7E3D\u662F\
 OptionPanel.pt_BR=Portugu\u00EAs- Brasil (\u5DF4\u897F\u8461\u8404\u7259\u6587)
 OptionPanel.pt_PT=Portugu\u00EAs- Portugal (\u8461\u8404\u7259\u6587)
 OptionPanel.RECT=\u77E9\u5F62
+OptionPanel.rectangle=\u77E9\u5F62
 OptionPanel.relative=\u76F8\u5C0D
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"\u8A62\u554F"\u6703\u8A62\u554F\u60A8\uFF08\u4F7F\u7528\u4E0A\u7591\u60D1\u7684\uFF09\u3002<br>"\u662F"\u5C07\u986F\u793A RTF \u7DE8\u8F2F\u5668\u3002<br>\u201C\u5426\u201D\u5C07\u986F\u793A\u7D14\u6587\u5B57\u7DE8\u8F2F\u5668\u3002</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=\u4F7F\u7528\u591A\u6587\u672C\u683C\u5F0F (RTF) \u8CBC\u4E0A
@@ -1255,6 +1257,8 @@ OptionPanel.set_property_text=\u66F4\u6539
 OptionPanel.set_property_text.tooltip=\u52FE\u9078\u4EE5\u6539\u8B8A\u9019\u9805\u6A23\u5F0F\u6027\u8CEA
 OptionPanel.setscript=\u78BA\u8A8D\u8B8A\u66F4\uFF1F
 OptionPanel.setscript.tooltip=\u6307\u4EE4\u5C07\u548C\u76EE\u524D\u8A2D\u5B9A\u7684\u6A23\u5F0F\u76F8\u95DC\u806F.
+OptionPanel.shape_horizontal_margin=\u6C34\u5E73\u908A\u8DDD
+OptionPanel.shape_vertical_margin=\u5782\u76F4\u908A\u8DDD
 OptionPanel.sharp_bezier=\u7531\u7C97\u800C\u7D30\u7684\u8C9D\u6C0F\u66F2\u7DDA
 OptionPanel.sharp_linear=\u7531\u7C97\u800C\u7D30\u7684\u76F4\u7DDA
 OptionPanel.show_icon_for_attributes=\u986F\u793A\u4EE3\u8868\u6709\u5C6C\u6027\u7684\u5C0F\u5716\u793A
@@ -1323,6 +1327,7 @@ OptionPanel.undo_levels=\u5FA9\u539F\u6B21\u6578
 OptionPanel.undo_levels.tooltip=<html>\u6C7A\u5B9A\u5132\u5B58\u591A\u5C11\u6B65\u9A5F\u53EF\u4F9B\u5FA9\u539F\u3002</html>
 OptionPanel.unfold_on_paste=\u8CBC\u4E0A\u7684\u6642\u5019\u5C55\u958B\u7BC0\u9EDE
 OptionPanel.unfold_on_paste.tooltip=\u8CBC\u4E0A\u6216\u662F\u62D6\u653E\u7BC0\u9EDE\u7684\u6642\u5019\u5C55\u958B\u7BC0\u9EDE
+OptionPanel.uniform_shape=\u4E00\u81F4
 OptionPanel.use_common_out_point_for_root_node=\u5206\u652F\u7DDA\u4F86\u81EA\u4E3B\u7BC0\u9EDE\u7684\u4E00\u500B\u9EDE
 OptionPanel.use_common_out_point_for_root_node.tooltip=\u5206\u652F\u7DDA\u5F9E\u4E3B\u7BC0\u9EDE\u4E0A\u7684\u4E00\u500B\u9EDE\u958B\u59CB
 OptionPanel.use_tabbed_pane=\u9801\u7C3D\u6A21\u5F0F
