Squashed alpha-1.5.1-pre11
commit 1a34b7bae25625c3771bfe5558347834b9507b57
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 16:33:19 2015 +0100

    Fix narrow hexagon lower point

commit 679aded74a8129a0bb7f8c65a009366c9a647a66
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 16:28:23 2015 +0100

    Change text "node style" to "node shape"

commit ef95c892e1b6986aeabcf9a571c5f7afc0782dbe
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 16:21:20 2015 +0100

    Bug fix in saving details with localized html

commit a77dc26c784cc8f5b285c9353007421336fabdfc
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 16:15:24 2015 +0100

    Update template BigMap.mm to use new node shape concept

commit 43c7fd5732ae8e22e36ab0044f9c9ea377e83804
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Nov 28 16:15:02 2015 +0100

    refactor

--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1113,8 +1113,7 @@ OptionPanel.nodeformat=Format
 OptionPanel.nodeformat.tooltip=<html>Text replacement and/or formatting:<ul><li><em>Template expansion</em> (<tt>%s</tt> is the original text), e.g. <tt>BEWARE: %s</tt><li><em>Formatting of dates and numbers</em> - see the examples in the selection box</ul></html>
 OptionPanel.nodenumbering=Node numbering
 OptionPanel.nodenumbering.tooltip=Adds serial number (e.g. 1.3.1) to the node text.
-OptionPanel.nodeshape=Node style
-OptionPanel.nodeshape.tooltip=<html>The style describes the outer form of a node. <br>Possible values:<br><table border="1"><tr><td>fork: </td><td> without surrounding box,</td></tr><tr><td>bubble: </td><td> node with a surrounding rectangle,</td></tr><tr><td>As parent: </td><td> take the style from the parent node <br>or the default root node style for the root node,</td></tr><tr><td>Combined: </td><td> Bubble when node is folded, fork otherwise.</td></tr></table></html>
+OptionPanel.nodeshape=Node shape
 OptionPanel.nodetext=Core text
 OptionPanel.nodetext.tooltip=Here, you can define the node's text. The former text is discarded when such a pattern is applied.
 OptionPanel.nothing=Nothing
