Squashed alpha-1.5.1-pre12
commit 09c1f30861333f4b502453deddd7e3f18db66965
Merge: 7703618 6c3278c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 20:08:06 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 770361869c4662de7394a9ccf984edb678168206
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 19:45:09 2015 +0100

    Revert to old implementation of FreeplaneGUIStarter

commit 1349a919d5b33772ea0353dc443ce232e59abe85
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 19:44:31 2015 +0100

    Extract method

commit 0c0803df79d887209b074b6019ba670fa84e7e4e
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 19:42:53 2015 +0100

    SCROLL_NODE_TO_THE_LEFT only for root nodes

commit 04cf8288d3e0db89a673a67375afb72c3be3dd32
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 19:40:48 2015 +0100

    Do not scroll nodes if frame layout is not completed

commit 6c3278c3df74844d3794f2f056a6dcaa747e863b
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Sat Nov 28 07:35:05 2015 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1846 of 1846 strings)

commit 417a2234239f9f06e4d388c0f8adfa01e0b0efe3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 09:00:37 2015 +0100

    Fix hidden details preferred size for zoomed maps

commit d205a2eb3fea8d9332c35a07797c5edc62f7391c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 09:00:11 2015 +0100

    If zoomable label has an icon do not increase its preferred size to font
    height

commit 008af56cfaf8aa53c455ebd8f7f497a556e8f71c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 08:44:48 2015 +0100

    Revert "Do not move map when viewport extent size changes"

    This reverts commit e3a01081bc4d980121b87ddd2fca1fa0a0bbfdaf.

commit e3a01081bc4d980121b87ddd2fca1fa0a0bbfdaf
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 08:30:02 2015 

--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -1116,6 +1116,7 @@ OptionPanel.nodeformat=Predlo\u017Eak / Oblik
 OptionPanel.nodeformat.tooltip=<html>Zamjena i/ili oblikovanje teksta:<ul><li><em>Predlo\u017Eak pro\u0161irenja:</em> <tt>%s</tt> je orginalni tekst, e.g. <tt>OPREZ: %s</tt><li><em>Oblikovanje brojeva i datuma:</em> Na primjer <tt>%.0</tt> format daje cijeli broj. Pogledaj <a href="http://download.oracle.com/javase/1.5.0/docs/api/java/util/Formatter.html#syntax">Formatter string syntax</a>.<li><em>Formule:</em> Pogledaj <a href="http://freeplane.sourceforge.net/wiki/index.php/Formulas">Freeplane Formulas documentation</a> za detalje.</ul></html>
 OptionPanel.nodenumbering=Dodavanje broja \u010Dvoru
 OptionPanel.nodenumbering.tooltip=Dodavanje serijskog broja u tekst \u010Dvora (primjer - 1.3.1).
+OptionPanel.nodeshape=Oblik \u010Dvora
 OptionPanel.nodetext=Tekst \u010Dvora
 OptionPanel.nodetext.tooltip=Ovdje mo\u017Eete definirati tekst \u010Dvorova. Kori\u0161tenjem uzorka prethodni tekst je odba\u010Den.
 OptionPanel.nothing=Ni\u0161ta
