--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -1120,6 +1120,7 @@ OptionPanel.nodeformat=Formato
 OptionPanel.nodeformat.tooltip=<html>Substitui\u00E7\u00E3o e/ou formata\u00E7\u00E3o de texto:<ul><li><em> expans\u00E3o de modelo</em> (<tt>%s</tt> \u00E9 o texto original), i.e. <tt>ATEN\u00C7\u00C3O: %s</tt><li><em>formata\u00E7\u00E3o de datas e n\u00FAmeros</em> - veja os exemplos na caixa de sele\u00E7\u00E3o</ul></html>
 OptionPanel.nodenumbering=Numera\u00E7\u00E3o de n\u00F3s
 OptionPanel.nodenumbering.tooltip=Adiciona n\u00FAmero de s\u00E9rie ao texto do n\u00F3 (i.e. 1.3.1).
+OptionPanel.nodeshape=Forma do n\u00F3
 OptionPanel.nodetext=Texto do n\u00F3
 OptionPanel.nodetext.tooltip=Aqui pode definir o texto do n\u00F3. O texto anterior \u00E9 descartado quando aplica este padr\u00E3o.
 OptionPanel.nothing=Nada
