--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -1118,6 +1118,7 @@ OptionPanel.nodeformat=\u6578\u5B57\u683C\u5F0F
 OptionPanel.nodeformat.tooltip=<html>\u6587\u5B57\u66FF\u63DB / \u683C\u5F0F\uFF1A <ul><li><em>\u6A23\u5F0F\u64F4\u5145</em> (<tt>%s</tt> \u662F\u539F\u59CB\u6587\u5B57)\uFF0C\u4F8B\u5982 <tt>\u6CE8\u610F\uFF1A%s</tt><li><em>\u65E5\u671F\u548C\u6578\u5B57\u683C\u5F0F</em> - \u770B\u9078\u53D6\u65B9\u584A\u4E2D\u7684\u4F8B\u5B50</ul></html>
 OptionPanel.nodenumbering=\u7BC0\u9EDE\u7DE8\u865F
 OptionPanel.nodenumbering.tooltip=\u5728\u7BC0\u9EDE\u6587\u5B57\u52A0\u4E0A\u6392\u5E8F\u7DE8\u865F (\u4F8B\u5982 1.3.1)\u3002
+OptionPanel.nodeshape=\u7BC0\u9EDE\u5F62\u72C0
 OptionPanel.nodetext=\u7BC0\u9EDE\u6587\u5B57
 OptionPanel.nodetext.tooltip=\u5B9A\u7FA9\u7BC0\u9EDE\u6587\u5B57\u3002\u4E4B\u524D\u7684\u6587\u5B57\u6703\u88AB\u6368\u68C4\u3002
 OptionPanel.nothing=\u53D6\u6D88\u5168\u9078
