Squashed alpha-1.5.1-pre13
commit d0878a93d3e799f5573db8208765e2a8423a881c
Merge: c1324d4 6cd3c10
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 21:30:34 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit c1324d4fd5a8cbfdee6a46384992c9d62ca92714
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 21:30:24 2015 +0100

    Do not move map when viewport extent size changes

commit 21a2c1ffdaa51d2d0c8e7b04523cd184f5830167
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 29 21:27:26 2015 +0100

    Fix scrolling of invisible maps

commit 6cd3c10cb5954c62e4317129e9dec98984d6cabc
Merge: 61e61c5 09c1f30
Author: Weblate <noreply@weblate.org>
Date:   Sun Nov 29 20:47:11 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 61e61c58a25f330e740aed9fea2ad4406ff2f20a
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Nov 28 23:46:50 2015 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.9% (1845 of 1846 strings)

commit 759884085bc3c3df4e2cf51c619380d377c7219f
Author: Ldm Public <ldmpub@gmail.com>
Date:   Sat Nov 28 17:50:47 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.7% (1842 of 1846 strings)

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -1116,6 +1116,7 @@ OptionPanel.nodeformat=Format
 OptionPanel.nodeformat.tooltip=<html>Formule de conversion du texte du n\u0153ud.<tt>%s</tt> repr\u00E9sente le texte initial. <ul><li>Exemple de formule : <tt>Urgence %s</tt> <li>Pour les nombres et les dates, voir les exemples dans la liste.<ul>La liste propos\u00E9e provient du fichier <b>formats.xml</b> du dossier utilisateur.
 OptionPanel.nodenumbering=Num\u00E9rotation
 OptionPanel.nodenumbering.tooltip=Ajoute un num\u00E9ro d'ordre en d\u00E9but de n\u0153ud
+OptionPanel.nodeshape=Forme de n\u0153ud
 OptionPanel.nodetext=Texte du n\u0153ud
 OptionPanel.nodetext.tooltip=Vous pouvez ici d\u00E9finir le texte du n\u0153ud. Le texte pr\u00E9c\u00E9dent est supprim\u00E9 lorsqu'un tel mod\u00E8le est appliqu\u00E9.
 OptionPanel.nothing=Rien
