Squashed alpha-1.5.4-pre01
commit b6bbac855e1c43ddadcf0d2d031f6218496a7f52
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:49:31 2015 +0100

    RemoveAllAlwaysUnfoldedNodeFlagsAction and SetAlwaysUnfoldedNodeFlagsAction should ignore hidden summary nodes

commit 88c75faab4deb39e5334d42449fbcca789eeb0f9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:48:44 2015 +0100

    Do not select summary node children on up and down key selection

commit 139ea1c207efeb7407bc246172d1672d31b34c30
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:48:12 2015 +0100

    Do not select invisible nodes on continious selection

commit d36054bd726cfbf9a2962c48764f43eb8fe6dd15
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:27:54 2015 +0100

    SummaryGroupEdgeListAdderShould not add group begin nodes and summary
    nodes twice

commit ad9b8a51d28d529f4a84981f507f959719425ac3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 12:08:43 2015 +0100

    Fix SummaryLevels for group begin node

commit b81072334db479f573fe39c7682bd081c65694f9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 11:40:41 2015 +0100

    repaint map if connectors are added / inserted after node deletion
    /insertion

commit b1237b04d74bcfc433ac3aac94fd90334219686f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 10:55:16 2015 +0100

    Save actor and selection in undo buffer before executing

commit e4d608fb8650d1e873227ec2594cd36c20ec8fe0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Dec 28 09:35:19 2015 +0100

    UITools.errorMessage("unexpected error: node " + getMainView().getText()
    + " has lost its parent ");

commit 51277b032f825b3eacc972261f5efeb6b1215ffa
Merge: 7de1ccc 4793dd4
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Dec 27 21:21:28 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 7de1ccc5cf58080f7fedf34dfd3b2109d0ebe

--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -1351,8 +1351,10 @@ OptionPanel.time_for_delayed_selection=Tempo para atraso da sele\u00E7\u00E3o
 OptionPanel.time_for_delayed_selection.tooltip=<html>O tempo de atraso na sele\u00E7\u00E3o quando o rato est\u00E1 sobre os n\u00F3s (em mseg). Altere este valor para 1 se quiser que a sele\u00E7\u00E3o se fa\u00E7a imediatamente ao passar do rato.</html>
 OptionPanel.toolTipManager.dismissDelay=Atraso de sa\u00EDda, mseg
 OptionPanel.toolTipManager.initialDelay=Atraso inicial, mseg
-OptionPanel.toolTipManager.max_tooltip_width=Comprimento da sugest\u00E3o
-OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>A dimens\u00E3o predefinida da sugest\u00E3o em pixels.</html>
+OptionPanel.toolTipManager.max_tooltip_height=Altura m\u00E1xima da sugest\u00E3o do n\u00F3
+OptionPanel.toolTipManager.max_tooltip_height.tooltip=A altura m\u00E1xima da sugest\u00E3o do n\u00F3, em pixels.
+OptionPanel.toolTipManager.max_tooltip_width=Largura m\u00E1xima da sugest\u00E3o do n\u00F3
+OptionPanel.toolTipManager.max_tooltip_width.tooltip=A largura m\u00E1xima da sugest\u00E3o do n\u00F3, em pixels.
 OptionPanel.toolTipManager.reshowDelay=Voltar a mostrar atraso, mseg
 OptionPanel.tr=Turco / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ucraniano / \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
