--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1343,8 +1343,10 @@ OptionPanel.time_for_delayed_selection=Time for delayed selection
 OptionPanel.time_for_delayed_selection.tooltip=<html> Selection time delay of nodes when mouse is over (in msec). Change this value to 1 if you want direct selection on mouse over.</html>
 OptionPanel.toolTipManager.dismissDelay=Dismiss delay, ms
 OptionPanel.toolTipManager.initialDelay=Initial delay, ms
-OptionPanel.toolTipManager.max_tooltip_width=Node tool tip width
-OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>The default tooltip width in pixels.</html>
+OptionPanel.toolTipManager.max_tooltip_height=Maximal node tool tip height
+OptionPanel.toolTipManager.max_tooltip_height.tooltip=The maximal tool tip height in pixels.
+OptionPanel.toolTipManager.max_tooltip_width=Maximal node tool tip width
+OptionPanel.toolTipManager.max_tooltip_width.tooltip=The maximal tool tip width in pixels.
 OptionPanel.toolTipManager.reshowDelay=Reshow delay, ms
 OptionPanel.tr=Turkish / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ukrainian / \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
