--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -971,6 +971,7 @@ OptionPanel.combined=Combined
 OptionPanel.compare_as_number=Compare as numbers
 OptionPanel.convert_to_current_version=<html>Automatically convert maps of older Freeplane versions <br>to the current version?</html>
 OptionPanel.convert_to_current_version.tooltip=<html>Only for very big maps that don't need to be converted <br>(this is expert knowledge) you can open the maps without conversion.</html>
+OptionPanel.copyFormatToNewSibling=Copy format to new siblings
 OptionPanel.cs=Czech / \u010Desky
 OptionPanel.cut_nodes_without_question=Cut nodes without confirmation?
 OptionPanel.cut_nodes_without_question.tooltip=If this check box is set the nodes are cut without confirmation. This can cause loss of information if pressed without intention.
@@ -1206,6 +1207,7 @@ OptionPanel.script_user_key_name_for_signing=Optional user key alias for signing
 OptionPanel.script_user_key_name_for_signing.tooltip=<html>If you want to sign your scripts, enter the alias of the key here. <br>The key is expected to reside in the default keystore. <br>The password of the key's secret key must coincide with the keystore password (this is the default).</html>
 OptionPanel.scrollbar_increment=Speed
 OptionPanel.scrolling_speed=Automatic map scrolling speed
+OptionPanel.scrollOnUnfold=Scroll map after unfolding a node
 OptionPanel.selection_method=Selection method
 OptionPanel.selection_method.tooltip=<html> with the following switch you can enable/disable the delayed selection scheme. Auto options. Do not modify these as they will be saved to auto.properties anyway.</html>
 OptionPanel.selection_method_by_click=By click
